# XCompute

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Code/XCompute/: ComputeRunner.cpp  ComputeRunner.hpp  DisplayShaders.hpp  main.cpp
Shaders/: Mandelbrot.glsl
